[package]
name = "cands"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
log = "0.4.14"
env_logger = "0.9.0"
derive_more = "0.99"
once_cell = "1.13"

# Parser stuff
codespan-reporting = "0.11"
nom = "7"
nom_locate = "4.0"
nom-supreme = "0.8"
paste = "1.0"

[dependencies.logwrap]
path = "subcrates/logwrap"