[package]
name = "cands"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
log = "0.4.14"
env_logger = "0.9.0"
derive_more = "0.99"
once_cell = "1.13"
serde = { version = "1.0", optional = true, features = [ "derive" ] }

# My proc-macro
[dependencies.logwrap]
path = "subcrates/logwrap"